@@ -1,15 +1,15 @@
 Package: RcppTOML
 Type: Package
 Title: 'Rcpp' Bindings to Parser for Tom's Obvious Markup Language
-Version: 0.1.4
-Date: 2018-10-23
+Version: 0.1.4.1
+Date: 2018-10-25
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The configuration format defined by 'TOML' (which expands to
  "Tom's Obvious Markup Language") specifies an excellent format (described at
  <https://github.com/toml-lang/toml>) suitable for both human editing as well
  as the common uses of a machine-readable format. This package uses 'Rcpp' to
- connect the 'cpptoml' parser written by Chase Geigle (in modern C++11) to R. 
+ connect the 'cpptoml' parser written by Chase Geigle (in modern C++11) to R.
 SystemRequirements: A C++11 compiler; g++ (>= 4.8.*) should be fine.
 BugReports: https://github.com/eddelbuettel/rcpptoml/issues
 URL: http://dirk.eddelbuettel.com/code/rcpp.toml.html
