@@ -1,5 +1,4 @@
-## RcppTOML [![Build
-Status](https://travis-ci.org/eddelbuettel/rcpptoml.svg)](https://travis-ci.org/eddelbuettel/rcpptoml) [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html) [![CRAN](http://www.r-pkg.org/badges/version/RcppTOML)](https://cran.r-project.org/package=RcppTOML) [![Dependencies](https://tinyverse.netlify.com/badge/RcppTOML)](https://cran.r-project.org/package=RcppTOML) [![Downloads](http://cranlogs.r-pkg.org/badges/RcppTOML?color=brightgreen)](http://www.r-pkg.org/pkg/RcppTOML)
+## RcppTOML [![Build Status](https://travis-ci.org/eddelbuettel/rcpptoml.svg)](https://travis-ci.org/eddelbuettel/rcpptoml) [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html) [![CRAN](http://www.r-pkg.org/badges/version/RcppTOML)](https://cran.r-project.org/package=RcppTOML) [![Dependencies](https://tinyverse.netlify.com/badge/RcppTOML)](https://cran.r-project.org/package=RcppTOML) [![Downloads](http://cranlogs.r-pkg.org/badges/RcppTOML?color=brightgreen)](http://www.r-pkg.org/pkg/RcppTOML)
 
 Rcpp bindings for [TOML](https://github.com/toml-lang/toml)
 
@@ -12,8 +11,8 @@ useful as it is strongly typed: values come back as integer, double,
 nesting and arrays are supported as well.
 
 This package uses the C++11 implementation written by Chase Geigle in
-[cpptoml](https://github.com/skystrife/cpptoml) to implement a parser used by
-R.
+[cpptoml](https://github.com/skystrife/cpptoml) to provide a parser that can
+be used by R.
 
 ### Example
 
@@ -82,7 +81,7 @@ List of 5
   .. ..$ dc: chr "eqdc10"
   .. ..$ ip: chr "10.0.0.2"
  $ title   : chr "TOML Example"
-R> 
+R>
 ```
 
 See the other examples and the [upstream documentation](https://github.com/toml-lang/toml) for more.
@@ -113,7 +112,7 @@ drat::addRepo("ghrr")
 Feature-complete with
 [TOML v0.4.0](https://github.com/toml-lang/toml/blob/master/versions/en/toml-v0.4.0.md),
 see the [tests/](https://github.com/eddelbuettel/rcpptoml/tree/master/tests)
-directory.  It parses everything that the underlying 
+directory.  It parses everything that the underlying
 [cpptoml](https://github.com/skystrife/cpptoml) parses with the same (sole)
 exception of unicode escape characters in strings.
 
@@ -124,5 +123,3 @@ Dirk Eddelbuettel
 ### License
 
 GPL (>= 2)
-
-
