@@ -1,3 +1,7 @@
+2018-10-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/parse.cpp (getValue): Support local time
+
 2018-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.1.4
